--- a/assemblies/server-ear/pom.xml
+++ b/assemblies/server-ear/pom.xml
@@ -17,6 +17,15 @@
 			<version>${pom.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.el</groupId>
+			<artifactId>jboss-el</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.seam</groupId>
+			<artifactId>jboss-seam</artifactId>
+			<type>ejb</type>
+		</dependency>
+		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
 			<artifactId>time4u-server-entities</artifactId>
 			<version>${pom.version}</version>
@@ -52,12 +61,18 @@
 			<plugin>
 				<artifactId>maven-ear-plugin</artifactId>
 				<configuration>
+              		<version>5</version>
+              		<defaultLibBundleDir>lib</defaultLibBundleDir>
 					<modules>
 						<jarModule>
 							<groupId>de.objectcode.time4u.server</groupId>
 							<artifactId>time4u-server-api</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<ejbModule>
+							<groupId>org.jboss.seam</groupId>
+							<artifactId>jboss-seam</artifactId>
+						</ejbModule>
 						<ejbModule>
 							<groupId>de.objectcode.time4u.server</groupId>
 							<artifactId>time4u-server-entities</artifactId>
