--- a/pom.xml
+++ b/pom.xml
@@ -375,6 +375,7 @@
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam</artifactId>
 				<version>2.1.0.BETA1</version>
+				<type>ejb</type>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
