Prepared team list
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@111 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/jaas/pom.xml
+++ b/server/jaas/pom.xml
@@ -18,6 +18,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>de.objectcode.time4u.server</groupId>
+			<artifactId>time4u-server-ejb</artifactId>
+			<version>${pom.version}</version>
+			<type>ejb</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 		</dependency>
@@ -32,21 +39,6 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jboss-packaging-maven-plugin</artifactId>
 				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<configuration>
-							<classifier>compile</classifier>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
