Prepared team list
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@112 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/assemblies/server-ear/pom.xml
+++ b/assemblies/server-ear/pom.xml
@@ -24,6 +24,20 @@
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
 			<type>ejb</type>
+			<exclusions>
+				<exclusion>
+					<groupId>javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>dom4j</groupId>
+					<artifactId>dom4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
@@ -61,8 +75,8 @@
 			<plugin>
 				<artifactId>maven-ear-plugin</artifactId>
 				<configuration>
-              		<version>5</version>
-              		<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<version>5</version>
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
 					<modules>
 						<jarModule>
 							<groupId>de.objectcode.time4u.server</groupId>
