Fixed Mysql deployment. Project/Task migrators
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@116 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/assemblies/server-deploy/src/main/script/build.properties
+++ b/assemblies/server-deploy/src/main/script/build.properties
@@ -2,13 +2,12 @@
 jboss.home=/Users/junglas/workspaces/jboss-4.2.3.GA
 
 # JBoss configuration
-jboss.config=time4u
+jboss.config=time4uMysql
 
 # Database engine
-db.engine=derby
-#db.engine=mysql
+db.engine=mysql
 
 db.host=192.168.23.128
-db.name=time4u
-db.user=time4u
-db.password=time4u
+db.name=time4u2
+db.user=time4u2
+db.password=time4u2
