--- a/assemblies/server-deploy/src/main/script/run-time4u.conf
+++ b/assemblies/server-deploy/src/main/script/run-time4u.conf
@@ -49,4 +49,6 @@ fi
 # Sample JPDA settings for shared memory debugging 
 #JAVA_OPTS="$JAVA_OPTS -Xrunjdwp:transport=dt_shmem,server=y,suspend=n,address=jboss"
 
+JAVA_OPTS="$JAVA_OPTS -Djavax.management.builder.initial=org.jboss.system.server.jmx.MBeanServerBuilderImpl"
+JAVA_OPTS="$JAVA_OPTS -Djboss.platform.mbeanserver"
 JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote"
