--- a/client/ui/plugin.xml
+++ b/client/ui/plugin.xml
@@ -244,7 +244,7 @@
                icon="icons/NewWorkItem.gif"
                id="de.objectcode.time4u.client.ui.workitem.new"
                label="%action.workItem.new.label"
-               menubarPath="objectGroup"
+               menubarPath="newGroup"
                tooltip="%action.workItem.new.tooltip">
          </action>
       </viewerContribution>
@@ -267,7 +267,7 @@
                icon="icons/DeleteWorkItem.gif"
                id="de.objectcode.time4u.client.ui.workitem.delete"
                label="%action.workItem.delete.label"
-               menubarPath="objectGroup"
+               menubarPath="additions"
                tooltip="%action.workItem.delete.tooltip">
          </action>
          <action
