--- a/pom.xml
+++ b/pom.xml
@@ -387,13 +387,13 @@
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam</artifactId>
-				<version>2.1.0.BETA1</version>
+				<version>2.1.0.CR1</version>
 				<type>ejb</type>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam-ui</artifactId>
-				<version>2.1.0.BETA1</version>
+				<version>2.1.0.CR1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.el</groupId>
