--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<show>private</show>
+					<bottom><![CDATA[ <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=239870&amp;type=2" alt="sourceforge.net"></a>]]></bottom>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
