Fixed id generation once again. Prepared time policies
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@137 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/ui/plugin.properties
+++ b/client/ui/plugin.properties
@@ -89,14 +89,14 @@ action.todo.onlyActive.label = Show only active
 action.todo.onlyActive.tooltip = Show only active
 action.todo.showView.label = Open Todo View
 action.todo.showView.tooltip = Open Todo View
-action.worktime.policy.label = Worktime policies
-action.worktime.policy.tooltip = Worktime policies
-action.worktime.override.label = Worktime override
-action.worktime.override.tooltip = Worktime override
-action.worktime.markfree.label = Mark free day
-action.worktime.markfree.tooltip = Mark free day
-action.worktime.markregular.label = Mark regular day
-action.worktime.markregular.tooltip = Mark regular day
+action.timepolicy.manage.label = Time policies
+action.timepolicy.manage.tooltip = Time policies
+action.timepolicy.override.label = Time policy override
+action.timepolicy.override.tooltip = Time policy override
+action.timepolicy.markfree.label = Mark free day
+action.timepolicy.markfree.tooltip = Mark free day
+action.timepolicy.markregular.label = Mark regular day
+action.timepolicy.markregular.tooltip = Mark regular day
 
 action.export.label = Export ...
 action.import.label = Import ...
@@ -118,9 +118,9 @@ dialog.workitem.search.from.label = From
 dialog.workitem.search.until.label = Until
 dialog.workitem.search.button.label = Search ...
 
-dialog.worktime.policy.title = Worktime policies
-dialog.worktime.policy.week.title = Week policy
-dialog.worktime.override.title = Worktime override
+dialog.timepolicy.manage.title = Time policies
+dialog.timepolicy.week.title = Week time policy
+dialog.timepolicy.override.title = Time policy override
 
 dialog.todo.new.title = New Todo
 dialog.todo.edit.title = Edit Todo
