Added REST api (experimental)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@141 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,11 @@
 				<version>1.2_09</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-jaxrs</artifactId>
+				<version>1.0-beta-8</version>
+			</dependency>
 
 			<!-- JDBC -->
 			<dependency>
