--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.objectcode.time4u</groupId>
 	<artifactId>time4u</artifactId>
-	<version>0.9.0</version>
+	<version>0.9.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>time4u</name>
 	<modules>
@@ -12,9 +12,9 @@
 		<module>migrator</module>
 	</modules>
 	<scm>
-		<connection>scm:svn:https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/tags/time4u-0.9.0</connection>
-		<developerConnection>scm:svn:https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/tags/time4u-0.9.0</developerConnection>
-		<url>http://sourceforge.net/projects/time4u/tags/time4u-0.9.0</url>
+		<connection>scm:svn:https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk</connection>
+		<developerConnection>scm:svn:https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk</developerConnection>
+		<url>http://sourceforge.net/projects/time4u</url>
 	</scm>
 	<distributionManagement>
 		<site>
