--- a/server/entities/pom.xml
+++ b/server/entities/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>de.objectcode.time4u.server</groupId>
 		<artifactId>server</artifactId>
-		<version>0.9.0</version>
+		<version>0.9.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
