--- a/client/ui/plugin.xml
+++ b/client/ui/plugin.xml
@@ -102,7 +102,7 @@
             name="Time4U">
          <property
                name="aboutText"
-               value="RCP Mail template created by PDE">
+               value="Time4U client 0.9.1">
          </property>
          <property
                name="windowImages"
