--- a/server/web/ui/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/ui/src/main/webapp/WEB-INF/web.xml
@@ -2,88 +2,87 @@
 
 
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
-  <!-- RichFaces -->
-  <context-param>
-    <param-name>org.richfaces.SKIN</param-name>
-    <param-value>blueSky</param-value>
-  </context-param>
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+	version="2.4">
+	<!-- RichFaces -->
+	<context-param>
+		<param-name>org.richfaces.SKIN</param-name>
+		<param-value>blueSky</param-value>
+	</context-param>
 
-  <!-- Ajax4jsf -->
-  <context-param>
-    <param-name>org.ajax4jsf.SKIN</param-name>
-    <param-value>blueSky</param-value>
-  </context-param>
+	<!-- Ajax4jsf -->
+	<context-param>
+		<param-name>org.ajax4jsf.SKIN</param-name>
+		<param-value>blueSky</param-value>
+	</context-param>
 
-  <context-param>
-    <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
-    <param-value>com.sun.facelets.FaceletViewHandler</param-value>
-  </context-param>
-  
-  <!-- Seam -->
-  <listener>
-    <listener-class>org.jboss.seam.servlet.SeamListener</listener-class>
-  </listener>
+	<context-param>
+		<param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
+		<param-value>com.sun.facelets.FaceletViewHandler</param-value>
+	</context-param>
 
-  <filter>
-    <filter-name>Seam Filter</filter-name>
-    <filter-class>org.jboss.seam.servlet.SeamFilter</filter-class>
-  </filter>
+	<!-- Seam -->
+	<listener>
+		<listener-class>org.jboss.seam.servlet.SeamListener</listener-class>
+	</listener>
 
-  <filter-mapping>
-    <filter-name>Seam Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+	<filter>
+		<filter-name>Seam Filter</filter-name>
+		<filter-class>org.jboss.seam.servlet.SeamFilter</filter-class>
+	</filter>
 
-  <servlet>
-    <servlet-name>Seam Resource Servlet</servlet-name>
-    <servlet-class> org.jboss.seam.servlet.SeamResourceServlet 
-    </servlet-class>
-  </servlet>
+	<filter-mapping>
+		<filter-name>Seam Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
-  <servlet-mapping>
-    <servlet-name>Seam Resource Servlet</servlet-name>
-    <url-pattern>/seam/resource/*</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>Seam Resource Servlet</servlet-name>
+		<servlet-class>org.jboss.seam.servlet.SeamResourceServlet</servlet-class>
+	</servlet>
 
-  <!-- Faces Servlet -->
-  <servlet>
-    <servlet-name>Faces Servlet</servlet-name>
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+	<servlet-mapping>
+		<servlet-name>Seam Resource Servlet</servlet-name>
+		<url-pattern>/seam/resource/*</url-pattern>
+	</servlet-mapping>
 
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>*.seam</url-pattern>
-  </servlet-mapping>
+	<!-- Faces Servlet -->
+	<servlet>
+		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/processFile/*</url-pattern>
-  </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.seam</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>/processFile/*</url-pattern>
+	</servlet-mapping>
 
 
-  <!-- JSF parameters -->
-  <context-param>
-    <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-    <param-value>.xhtml</param-value>
-  </context-param>
+	<!-- JSF parameters -->
+	<context-param>
+		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+		<param-value>.xhtml</param-value>
+	</context-param>
 
-  <context-param>
-    <param-name>facelets.DEVELOPMENT</param-name>
-    <param-value>true</param-value>
-  </context-param>
+	<context-param>
+		<param-name>facelets.DEVELOPMENT</param-name>
+		<param-value>true</param-value>
+	</context-param>
 
-  <!--
-    Anstellen, wenn Views aus dem ViewService geladen werden sollen
-    <context-param> <param-name>facelets.RESOURCE_RESOLVER</param-name>
-    <param-value>at.liwest.plosam.server.web.view.ViewResourceResolver</param-value>
-    </context-param>
-  -->
+	<!--
+		Anstellen, wenn Views aus dem ViewService geladen werden sollen
+		<context-param> <param-name>facelets.RESOURCE_RESOLVER</param-name>
+		<param-value>at.liwest.plosam.server.web.view.ViewResourceResolver</param-value>
+		</context-param>
+	-->
 
-  <session-config>
-    <session-timeout>60</session-timeout>
-  </session-config>
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
 </web-app>
