--- a/server/web/ui/pom.xml
+++ b/server/web/ui/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>hibernate-annotations</artifactId>
 			<scope>provided</scope>
 		</dependency>
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
