Installation instructions added
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@162 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/assemblies/server-deploy/src/main/script/build.xml
+++ b/assemblies/server-deploy/src/main/script/build.xml
@@ -58,6 +58,6 @@
 	</target>
 
 	<target name="usage">
-		<echo message="Use either: ant deploy or ant undeploy" />
+		<echo message="Use either: ant prepre, ant deploy or ant undeploy" />
 	</target>
 </project>
