Added xml io to report definition (preparation for user-definied reports)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@167 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/ejb/pom.xml
+++ b/server/ejb/pom.xml
@@ -34,6 +34,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.jws</groupId>
 			<artifactId>jsr181-api</artifactId>
 			<scope>provided</scope>
