--- a/server/web/ui/pom.xml
+++ b/server/web/ui/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>jboss-seam-ui</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.el</groupId>
 			<artifactId>jboss-el</artifactId>
 			<scope>provided</scope>
