--- a/client/ui/pom.xml
+++ b/client/ui/pom.xml
@@ -53,6 +53,9 @@
 	            		</goals>
           			</execution>
         		</executions>
+        		<configuration>
+        			<revisionOnScmFailure>non-svn</revisionOnScmFailure>
+        		</configuration>
       		</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
