--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,26 @@
 			<name>Java.net Repository for Maven 2</name>
 			<url>http://download.java.net/maven/2/</url>
 		</repository>
+		<repository>
+			<id>codehaus-releases</id>
+			<name>codehaus-releases</name>
+			<url>http://repository.codehaus.org</url>
+		</repository>
+		<repository>
+			<id>codehaus-snapshots</id>
+			<name>codehaus-snapshots</name>
+			<url>http://snapshots.repository.codehaus.org</url>
+		</repository>
 	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>codehaus-snapshots</id>
+			<name>codehaus-snapshots</name>
+			<url>http://snapshots.repository.codehaus.org</url>
+		</pluginRepository>
+	</pluginRepositories>
 	<properties>
+		<gwt.version>2.0.0</gwt.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<time4u.version>1.0.1</time4u.version>
 	</properties>
@@ -572,6 +590,19 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+
+<dependency>
+    <groupId>com.google.gwt</groupId>
+    <artifactId>gwt-servlet</artifactId>
+    <version>${gwt.version}</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
+    <groupId>com.google.gwt</groupId>
+    <artifactId>gwt-user</artifactId>
+    <version>${gwt.version}</version>
+    <scope>provided</scope>
+  </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<reporting>
