--- a/server/web/gwt/war/WEB-INF/web.xml
+++ b/server/web/gwt/war/WEB-INF/web.xml
@@ -11,9 +11,19 @@
     <servlet-class>de.objectcode.time4u.server.weg.gwt.test.server.GreetingServiceImpl</servlet-class>
   </servlet>
   
+  <servlet>
+  	<servlet-name>projectServlet</servlet-name>
+  	<servlet-class> de.objectcode.time4u.server.web.gwt.server.ProjectServiceImpl</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/time4u_server_web_gwt/greet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+  	<servlet-name>projectServlet</servlet-name>
+  	<url-pattern>/MainUI/project</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
