--- a/pom.xml
+++ b/pom.xml
@@ -603,6 +603,21 @@
     <version>${gwt.version}</version>
     <scope>provided</scope>
   </dependency>
+  <dependency>
+  	<groupId>org.springframework</groupId>
+  	<artifactId>spring-core</artifactId>
+  	<version>2.5.6.SEC01</version>
+  </dependency>
+  <dependency>
+  	<groupId>org.springframework</groupId>
+  	<artifactId>spring-web</artifactId>
+  	<version>2.5.6.SEC01</version>
+  </dependency>
+  <dependency>
+  	<groupId>org.springframework</groupId>
+  	<artifactId>spring-webmvc</artifactId>
+  	<version>2.5.6.SEC01</version>
+  </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<reporting>
