--- a/server/web/gwt/.project
+++ b/server/web/gwt/.project
@@ -1,29 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>time4u-server-web-gwt</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.google.gwt.eclipse.core.gwtProjectValidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.google.gdt.eclipse.core.webAppProjectValidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.google.gwt.eclipse.core.gwtNature</nature>
-		<nature>com.google.gdt.eclipse.core.webAppNature</nature>
-	</natures>
+  <name>time4u-server-web-gwt</name>
+  <comment>Time-Tracking tool with client-server synchronization.</comment>
+  <projects/>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>com.google.gwt.eclipse.core.gwtProjectValidator</name>
+    </buildCommand>
+    <buildCommand>
+      <name>com.google.gdt.eclipse.core.webAppProjectValidator</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>com.google.gwt.eclipse.core.gwtNature</nature>
+    <nature>com.google.gdt.eclipse.core.webAppNature</nature>
+  </natures>
 </projectDescription>
