--- a/pom.xml
+++ b/pom.xml
@@ -410,6 +410,11 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+			<dependency>
 				<groupId>jmdns</groupId>
 				<artifactId>jmdns</artifactId>
 				<version>1.0</version>
