--- a/pom.xml
+++ b/pom.xml
@@ -623,6 +623,16 @@
   	<artifactId>spring-webmvc</artifactId>
   	<version>2.5.6.SEC01</version>
   </dependency>
+  <dependency>
+  	<groupId>net.sf.gwt-widget</groupId>
+  	<artifactId>gwt-widgets</artifactId>
+  	<version>0.2.0</version>
+  </dependency>
+  <dependency>
+  	<groupId>net.sf.gwt-widget</groupId>
+  	<artifactId>gwt-widgets-server</artifactId>
+  	<version>0.1.4</version>
+  </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<reporting>
